# warehouse-service-test-task

./: .dockerignore  .env_example  .gitignore  Dockerfile.local  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: constant.py  dependencies.py  enums.py  main.py  start_app.py
src/dao/: base_dao.py
src/db/: config.py  database.py  models.py  schemas.py
src/kafka/: config.py  constants.py  consumer.py  handlers.py  schemas.py
src/migrations/: env.py
src/migrations/versions/: 8e5c8b4e62dd_init_migrations.py
src/redis/: constant.py  dependencies.py  service.py  utils.py
src/routers/: main.py
src/services/: movement_service.py  stock_services.py  warehouse_service.py
src/utils/: common.py
